--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,37 @@
-.card-text{
+.card-text-index {
     white-space: nowrap;
     overflow: hidden !important;
     text-overflow: ellipsis;
-}
+  }
+  
+  .card-body{
+      padding: 0.7rem !important;
+  }
+  
+  .indexpage {
+  }
+  
+  .card {
+ margin: 5px;
+  
+  }
+  .row {
+    justify-content: space-evenly;
+  }
+  
+  
+  .small-text{
+    font-size: 11px;
+  }
+
+  .homeclass{
+    margin-right: 10px;
+  }
+
+  .comment{
+    margin: 15px;
+  }
+
+  .post-form{
+    margin: 15px;
+  }
