--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
   placeholder: "What's on your mind?",
    class: "form-control" 
   )%>
-    <%= c.submit "Submit", class: "btn-primary" %>
+    <%= c.submit "Submit", class: "btn-primary", style:"margin-top:10px;" %>
   </div>
   <% end %>
 
