--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,6 +26,6 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
 
-    <%= f.submit "Create User", class: 'btn btn-primary' %>
+    <%= f.submit "Sign Up", class: 'btn btn-primary' %>
     <% end %>
 </div>
