added User Info

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
             <p class="card-text card-text-index">
                 <%= p.body%>
             </p>
+            <small style="color:silver;">Updated by <b><%= p.user&.name %></b></small>
         </div>
     </div>
     <% end %>
