added change password

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,9 +6,9 @@
         <% end %>
     </ul>
     <% end %>
-
+    
     <%= form_for @user do |f| %>
-
+    
     <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name , class: 'form-control' %>
@@ -17,7 +17,8 @@
         <%= f.label :email %>
         <%= f.email_field :email , class: 'form-control' %>
     </div>
-
     <%= f.submit "Update User", class: 'btn btn-primary' %>
+    <%= link_to "Change Password", editpassword_path(@user), class: 'btn btn-primary'  %>
+    
     <% end %>
 </div>
