--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,7 +2,7 @@
     <ul class="navbar-nav">
         <div class="linksNav">
             <li class="nav-item">
-                <%= link_to 'Blog On Rails', '/', class: 'navbar-brand' %>
+                <%= link_to 'Blog On Rails', '/users/users_info', class: 'navbar-brand' %>
             </li>
             <li class="nav-item">
                 <%= link_to 'Home', posts_path, class:'nav-link' %>
