--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,13 +43,14 @@
   <ul class="list-group">
     <li class="list-group-item" style="border: none; margin-bottom: 0px; padding-bottom: 0px; padding-top: 0;">
       <p style="margin-bottom: 0;"><%= comment.body %></p>
-      <p style="margin-bottom: 0;">
-        <small>
+      <p style="margin-bottom: 10px;">
+        <small style="color:silver; border-bottom: silver dotted 1px;">
           Commented by <%= comment.user&.name %>
           <%= distance_of_time_in_words_to_now(comment.updated_at)%> ago
+        </small>
           <% if can? :destroy, comment %>
-
-          ●
+        <small>
+          *
           <%= link_to 'Delete',
                 comment_path(comment),
                 method: :delete,
