--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row no-gutters">
     <% @posts.each do |p| %>
-    <div class="card col-12 col-xs-12 col-sm-5 col-md-3" >
+    <div class="card col-12 col-xs-12 col-sm-5 col-md-3 shadow p-3 mb-5 bg-white rounded">
         <div class="card-body">
             <h6 class="card-title">
                 <%= link_to p.title, post_path(p) %>
@@ -13,4 +13,3 @@
     </div>
     <% end %>
 </div>
-
